# bst

esp32_gateway/: CMakeLists.txt
esp32_gateway/components/nrf24l01/: CMakeLists.txt  nrf24l01.cpp  nrf24l01.h
esp32_gateway/components/protocol_examples_common/: stdin_out.c
esp32_gateway/main/: CMakeLists.txt  Kconfig.projbuild  common.h  main.cpp
esp32_gateway/main/i2c/: i2c.cpp  i2c.hpp
esp32_gateway/main/nrf/: nrf.cpp  nrf.hpp
esp32_gateway/main/sd/: sd.c  sd.h
esp32_gateway/main/sensor/: aht10.cpp  aht10.hpp
esp32_gateway/main/sntp/: sntp.c  sntp.h
esp32_gateway/main/web/: file_server.c
graph/: graph.html  graph.js
pico_relay/: main.py
pico_relay/lib/: nrf24l01test.py  nrf24l01test2.py
pico_relay/lib/nrf24l01/: nrf24l01.py
pico_sensor/: main.py
pico_sensor/lib/nrf24l01/: nrf24l01test.py  nrf24l01test2.py
pico_sensor/lib/sht4x/: sht4x.py
stm32_sensor/stm32_sensor/: MirfHardwareSpiDriver.h  nrf24l01.cpp  nrf24l01.h  stm32_sensor.ino
